chore: Rename files in `NeetCode-150/01.Arrays_and_Hashing/Arrays_and_Hashing_solutions` to follow consistent naming convention

--- a/00.Template/00.template_workbook.ipynb
+++ b/00.Template/00.template_workbook.ipynb
@@ -67,7 +67,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementation"
+    "# Intuition\n",
+    "<!-- Describe your first thoughts on how to solve this problem. -->\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Approach\n",
+    "<!-- Describe your approach to solving the problem. -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation 1"
    ]
   },
   {
@@ -79,6 +102,54 @@
     "def function_name(params):\n",
     "    # Your implementation here\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_name(params):\n",
+    "    # Your implementation here\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementation 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_name(params):\n",
+    "    # Your implementation here\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Complexity\n",
+    "- Time complexity:\n",
+    "<!-- Add your time complexity here, e.g. $$O(n)$$ -->\n",
+    "\n",
+    "- Space complexity:\n",
+    "<!-- Add your space complexity here, e.g. $$O(n)$$ -->"
    ]
   },
   {
